# yimba-api

./: .dockerignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  appdesc.yml  docker-compose.yaml  pyproject.toml  test_textblog.py  test_vadersentiment.py  test_youtube.py
.github/workflows/: publish-ghrc.yaml
src/: __init__.py
src/cli/: __init__.py  config.py  models.py  service.py  utils.py
src/services/: __init__.py
src/services/config/: __init__.py  apify.py  base.py  database.py  email.py  sentry.py  service.py
src/services/models/: __init__.py  mixins.py  models.py
src/services/routers/analyse/: __init__.py  api.py
src/services/routers/cloudtags/: __init__.py  api.py
src/services/routers/facebook/: __init__.py  api.py
src/services/routers/google/: __init__.py  api.py
src/services/routers/instagram/: __init__.py  api.py
src/services/schemas/: __init__.py  schema.py
src/shared/: auth_handler.py  crud.py  email_sender.py  error_codes.py  scrapper.py  service.py  url_patterns.py  utils.py
src/templates/pdf/: pdf.html
yimba_api/: __init__.py
yimba_api/apiclient/: __init__.py  core.py  encoder.py  models.py
yimba_api/cli/: __init__.py  config.py  models.py  service.py  utils.py
yimba_api/config/: __init__.py  apify.py  base.py  email.py  mongodb.py  redisdb.py  sentry.py  service.py  token.py
yimba_api/services/: __init__.py
yimba_api/services/analyse/: __init__.py  api.py  model.py
yimba_api/services/auth/: __init__.py  api.py  model.py
yimba_api/services/cloudtags/: __init__.py  api.py
yimba_api/services/facebook/: __init__.py  api.py  model.py  scrapper.py  utils.py
yimba_api/services/google/: __init__.py  api.py  model.py
yimba_api/services/instagram/: __init__.py  api.py  model.py
yimba_api/services/params/: __init__.py  api.py  model.py
yimba_api/services/project/: __init__.py  api.py  model.py
yimba_api/services/rapport/: __init__.py  api.py
yimba_api/services/tiktok/: __init__.py  api.py  model.py
yimba_api/services/twitter/: __init__.py  api.py  model.py
yimba_api/services/youtube/: __init__.py  api.py  model.py
yimba_api/shared/: authentication.py  crud.py  email_sender.py  fetch.py  scrapper.py  service.py  utils.py
yimba_api/static/css/: style.css
yimba_api/storage/: db.py
yimba_api/templates/pdf/: pdf.html
(+11 files in other folders)
